// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="padded base"
>
  <div
    className="padded small"
  >
    <p
      className="base regular base red"
    >
      Add another word or two. Uncommon words are better.
    </p>
    
  </div>
  <div
    className="wrapper miniLabel"
    style={
      Object {
        "--formField-maxLength": undefined,
      }
    }
  >
    <label
      className="label"
      htmlFor="123e4567-e89b-12d3-a456-426655440001"
    >
      Password
    </label>
    <input
      className="formField"
      id="123e4567-e89b-12d3-a456-426655440001"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="password"
      value="foo"
    />
  </div>
  <div
    aria-label="Level 0"
    className="strengthGauge level0"
  />
</div>
`;

exports[`renders an error message when given an insecure value 1`] = `
<div
  className="padded base"
>
  <div
    className="padded small"
  >
    <p
      className="base regular base red"
    >
      Add another word or two. Uncommon words are better.
    </p>
    <p
      className="base regular base red"
    >
      This is a top-10 common password
    </p>
  </div>
  <div
    className="wrapper miniLabel"
    style={
      Object {
        "--formField-maxLength": undefined,
      }
    }
  >
    <label
      className="label"
      htmlFor="123e4567-e89b-12d3-a456-426655440003"
    >
      Password
    </label>
    <input
      className="formField"
      id="123e4567-e89b-12d3-a456-426655440003"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="password"
      value="password"
    />
  </div>
  <div
    aria-label="Level 0"
    className="strengthGauge level0"
  />
</div>
`;

exports[`renders with custom placeholder 1`] = `
<div
  className="padded base"
>
  <div
    className="padded small"
  >
    <p
      className="base regular base red"
    >
      Add another word or two. Uncommon words are better.
    </p>
    
  </div>
  <div
    className="wrapper miniLabel"
    style={
      Object {
        "--formField-maxLength": undefined,
      }
    }
  >
    <label
      className="label"
      htmlFor="123e4567-e89b-12d3-a456-426655440002"
    >
      Secrets
    </label>
    <input
      className="formField"
      id="123e4567-e89b-12d3-a456-426655440002"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="password"
      value="foo"
    />
  </div>
  <div
    aria-label="Level 0"
    className="strengthGauge level0"
  />
</div>
`;
